# Openenv-X-Meta

./: BankSupportEnv_PRD.md  README.md
bank-support-env/: .dockerignore  Dockerfile  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  sanitize_project.py
bank-support-env/bank_support_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bank-support-env/server/: __init__.py  app.py  environment.py  graders.py  requirements.txt  tasks.py
